--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -21,6 +21,7 @@ Build system
 [-] Autotools: fix SMP builds.
 [-] Autotools: add AC_LANG_C.
 [+] Add hidden visibility support for GCC4.1 and cmake.
+[-] Autotools: fix libXss detection.
 
 Core
 ~~~~
@@ -41,6 +42,9 @@ Core
 [-] Disable history filter when it is empty.
 [+] Replace libxml2-based SAX parser with Qt-provided one.
 [+] Show user avatars in the dialog window.
+[-] Remove "To container" menu when separate containers are disabled.
+[*] Auto scroll message view only if it is scrolled to the bottom.
+[-] XFree: fix problems with Composite extension enabled.
 
 ICQ plugin
 ~~~~~~~~~~
