--- a/trunk/README
+++ b/trunk/README
@@ -30,4 +30,17 @@ ${install_dir}/icons
 Choose in the menu item "Setup". 
 In a window of adjustments choose a page "Themes" also choose a subject 
 in the list "Icons"
- 
+
+
+SOUND-Plugin with audiere
+_________ 
+The Sound plugin can be build with mp3, ogg, flac...-support.
+For this modified Sources of audiere is used. 
+Get them here: http://sim.gosign.de/audiere-1.9.4.rar
+Additionally add 
+
+#define USE_AUDIERE 
+
+to the sound.h
+You will need to include libaudiere.la and audiere.h to the makefiles for building sound.
+audiere.so is the library needed at runtime.
