update weather: uv string

--- a/trunk/po/de.po
+++ b/trunk/po/de.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: de\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-01-05 21:12+0100\n"
-"PO-Revision-Date: 2007-03-16 17:52+0100\n"
+"PO-Revision-Date: 2007-05-11 12:10+0100\n"
 "Last-Translator: Tobias Franz <noragen@gmx.net>\n"
 "Language-Team:  <de@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -5472,7 +5472,7 @@ msgstr "Sonnenuntergang"
 msgid ""
 "_: weather\n"
 "UV-Intensity is <b>%ut</b> with value <b>%ui</b> (of 11)"
-msgstr "UV-Intensität beträgt <b>%ut</b> von <b>%ui</b>"
+msgstr "Die UV-Intensität hat einen Wert von <b>%ui</b> (von 11).<br>Die Intensität ist <b>%ut</b>."
 
 #: plugins/weather/weather.cpp:585
 msgid ""
