--- a/trunk/po/bg.po
+++ b/trunk/po/bg.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: bg\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-10-22 12:42+0200\n"
-"PO-Revision-Date: 2007-10-22 12:59+0100\n"
-"Last-Translator: Tobias Franz <noragen@gmx.net>\n"
+"PO-Revision-Date: 2007-10-22 22:47+0300\n"
+"Last-Translator: Atanas Mavrov <bugar@developer.bg>\n"
 "Language-Team: Bulgarian <dict@fsa-bg.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -8586,11 +8586,10 @@ msgid ""
 msgstr "Мъгла"
 
 #: plugins/weather/weather.cpp:375
-#, fuzzy
 msgid ""
 "_: weather\n"
 "Foggy"
-msgstr "Мъгла"
+msgstr "Мъгливо"
 
 #: plugins/weather/weather.cpp:376
 msgid ""
