--- a/trunk/po/it.po
+++ b/trunk/po/it.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Sim\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-11-07 13:18+0100\n"
+"POT-Creation-Date: 2007-11-07 16:27+0100\n"
 "PO-Revision-Date: 2007-10-22 13:52+0100\n"
 "Last-Translator: Tobias Franz <noragen@gmx.net>\n"
 "Language-Team: Italian <it@li.org>\n"
@@ -7525,7 +7525,7 @@ msgid "Not connected"
 msgstr "Non connesso"
 
 #: plugins/weather/weather.cpp:333
-msgid "<b>Forecast for</b><br>\n"
+msgid "<br><b>Forecast for</b><br>\n"
 msgstr ""
 
 #: plugins/weather/weather.cpp:351
