--- a/trunk/po/bg.po
+++ b/trunk/po/bg.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: bg\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-11-07 13:18+0100\n"
+"POT-Creation-Date: 2007-11-07 16:27+0100\n"
 "PO-Revision-Date: 2007-10-22 22:47+0300\n"
 "Last-Translator: Atanas Mavrov <bugar@developer.bg>\n"
 "Language-Team: Bulgarian <dict@fsa-bg.org>\n"
@@ -7517,7 +7517,7 @@ msgid "Not connected"
 msgstr "Не е свързан"
 
 #: plugins/weather/weather.cpp:333
-msgid "<b>Forecast for</b><br>\n"
+msgid "<br><b>Forecast for</b><br>\n"
 msgstr ""
 
 #: plugins/weather/weather.cpp:351
