--- a/trunk/po/ca.po
+++ b/trunk/po/ca.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ca\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-11-07 13:18+0100\n"
+"POT-Creation-Date: 2007-11-07 16:27+0100\n"
 "PO-Revision-Date: 2005-04-20 20:56+0100\n"
 "Last-Translator: Tobias Franz <noragen@gmx.net>\n"
 "Language-Team: ca <paubcrespo@hotmail.com>\n"
@@ -7696,7 +7696,7 @@ msgid "Not connected"
 msgstr "No hi ha contacte"
 
 #: plugins/weather/weather.cpp:333
-msgid "<b>Forecast for</b><br>\n"
+msgid "<br><b>Forecast for</b><br>\n"
 msgstr ""
 
 #: plugins/weather/weather.cpp:351
