--- a/trunk/po/sk.po
+++ b/trunk/po/sk.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: sk\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-11-07 13:18+0100\n"
+"POT-Creation-Date: 2007-11-07 16:27+0100\n"
 "PO-Revision-Date: 2007-10-31 09:17+0100\n"
 "Last-Translator: Pavol Šimo <palo.simo@post.sk>\n"
 "Language-Team: Slovak <sk@li.org>\n"
@@ -8898,7 +8898,7 @@ msgid "Not connected"
 msgstr "Nepripojený"
 
 #: plugins/weather/weather.cpp:333
-msgid "<b>Forecast for</b><br>\n"
+msgid "<br><b>Forecast for</b><br>\n"
 msgstr ""
 
 #: plugins/weather/weather.cpp:351
