--- a/trunk/po/bg.po
+++ b/trunk/po/bg.po
@@ -1,4 +1,4 @@
-﻿# translation of bg.po to Bulgarian
+# translation of bg.po to Bulgarian
 # Copyright (C) 2003, 2004, 2005, 2006, 2007 Free Software Foundation, Inc.
 #
 # Атанас Мавров <bugar@mail.bg>, 2003.
